# gss2019

design-urban-strategy/: GSS_GRID_2019.gh  shortest_walk.3dm  shortest_walk.gh
remote-sensing/codes/: 190701-GH-NDVI.gh  access_segmented_cloud.gh  ndvi-image.py  open3d-test.py  segmented_cloud.3dm  vizualize.py
remote-sensing/codes/pcl/: CMakeLists.txt  reg_growth.cpp  reg_growth_rgb.cpp
